--- a/css/images-responsive-thumbnail-slider-style.css
+++ b/css/images-responsive-thumbnail-slider-style.css
@@ -184,6 +184,7 @@
     background: #666\9 !important;
     background: rgba(80, 80, 80, 0.75) !important;
     width: 100% !important;
+    border-radius:5px;
 }
 
 .bx-wrapper .bx-caption span {
@@ -194,17 +195,17 @@
     padding: 10px !important;
 }
 .image_error{color:red !important;}
-.succMsg{background:#E2F3DA  !important;border: 1px solid #9ADF8F !important;color:#556652 !important !important;padding:8px 8px 8px 36px !important;text-align:left !important;margin:5px !important;margin-left: 0px !important;margin-top: 30px !important;width:505px !important !important;}
-.errMsg{background:#FFCECE  !important;border: 1px solid #DF8F8F !important;color:#665252 !important !important;padding:8px 8px 8px 36px !important; text-align:left !important;margin:5px !important;margin-left: 0px !important;margin-top: 30px !important;width:505px !important !important;}
-.uparrow{text-align: center !important !important;}
-.uparrow img{cursor: pointer !important !important;background: none !important !important;border: none !important !important;margin: 0 0px 0px 0 !important !important;padding: 0px !important !important;max-width: auto !important !important;}
+.succMsg{background:#E2F3DA  !important;border: 1px solid #9ADF8F !important;color:#556652 !important ;padding:8px 8px 8px 36px !important;text-align:left !important;margin:5px !important;margin-left: 0px !important;margin-top: 30px !important;width:505px !important ;}
+.errMsg{background:#FFCECE  !important;border: 1px solid #DF8F8F !important;color:#665252 !important ;padding:8px 8px 8px 36px !important; text-align:left !important;margin:5px !important;margin-left: 0px !important;margin-top: 30px !important;width:505px !important ;}
+.uparrow{text-align: center !important ;}
+.uparrow img{cursor: pointer !important ;background: none !important ;border: none !important ;margin: 0 0px 0px 0 !important ;padding: 0px !important ;max-width: auto !important ;}
 .downarrow{text-align: center }
-.downarrow img{cursor: pointer !important !important;background: none !important !important;border: none !important !important;margin: 0 0px 0px 0 !important !important;padding: 0px !important !important;max-width: auto !important !important;}
-.verticalmainTable{margin: 0 auto !important !important;}
+.downarrow img{cursor: pointer !important ;background: none !important ;border: none !important ;margin: 0 0px 0px 0 !important ;padding: 0px !important ;max-width: auto !important ;}
+.verticalmainTable{margin: 0 auto !important ;}
 .verticalmainSliderDiv{}
 .sliderUl{}
-.sliderimgLiVertical{list-style-type:none !important !important;padding:0px !important !important;margin:0px !important !important;background: none !important !important;}
-.sliderimgLiVertical img{background: white !important !important;border: 1px solid #CCCCCC !important !important;padding: 12px !important  !important;margin: 7px !important !important;border-radius:10px !important !important;}
+.sliderimgLiVertical{list-style-type:none !important ;padding:0px !important ;margin:0px !important ;background: none !important ;}
+.sliderimgLiVertical img{background: white !important ;border: 1px solid #CCCCCC !important ;padding: 12px !important  !important;margin: 7px !important ;border-radius:10px !important ;}
 .printCode{background: lightYellow none repeat scroll 0 0 !important;border: 1px inset orange !important;height: 36px !important;margin: 10px !important;overflow: auto !important;padding: 6px !important;text-align: left !important;color: black !important;width:70% !important;}
 #gridTbl{width: 100%;}
 .table{width:100%;margin-bottom:18px;}.table th,.table td{padding:8px;line-height:18px;text-align:left;vertical-align:top;border-top:1px solid #E1E1E1}
