add small css class for wp 4.1
git-svn-id: https://plugins.svn.wordpress.org/wp-responsive-thumbnail-slider/trunk@1052826 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/images-responsive-thumbnail-slider-style.css
+++ b/css/images-responsive-thumbnail-slider-style.css
@@ -22,6 +22,7 @@
     padding: 0 !important;
     *zoom: 1 !important;
 }
+.bx-wrapper * {box-sizing:content-box}
 .limargin{margin-right: 15px !important;}
 
 .bx-wrapper .bx-viewport {padding: 5px !important;left: -5px !important;}
